force-app/main/default/objects/Milestone_Configuration__c/Milestone_Configuration__c.object-meta.xml
<CustomObject>
    <description>Milestone Configuration object sets the stage/status changes on the Application, Contract and Investment object that will trigger the creation of a Milestone History record in the Milestone History object</description>
    <label>Milestone Configuration</label>
    <nameField>
        <displayFormat>MC-{00000000}</displayFormat>
        <label>Milestone Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>