force-app/main/default/objects/Milestone_Configuration__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <description>The name of the stage/status as you want to see it in reporting (you may want this to be slightly differently/more explanatory as the stage/status name on the specific Application, Contract, Investment object</description>
    <label>Milestone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>