force-app/main/default/objects/Milestone_Configuration__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>The sequence number of the Stage/Status change on the Milestone History object. This sequence number is used to determine how long a Milestone has stayed in a certain Stage/Status</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>