force-app/main/default/objects/Milestone_Configuration__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The value of the Stage/Status field in the object that will need to trigger a Milestone History record</description>
    <label>Stage-Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>