force-app/main/default/objects/Milestone_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>Stage__c</columns>
    <columns>Sequence__c</columns>
    <columns>Milestone_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>